--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
       background-color: purple;
       margin-bottom: 20px;
       padding: 10px ;
+      cursor: pointer;
     }
     img{
       width: 300px;
-      height: 200px;
+      height: 180px;
     }
   </style>
   <body>
@@ -87,4 +88,4 @@
   </body>
 </html>
 <script src="scripts/index.js" type="module"></script>
-<!-- <script src="scripts/index.js" ></script> -->
+<script src="scripts/index1.js"></script>
