--- a/news.html
+++ b/news.html
@@ -6,8 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detailed news</title>
   </head>
+  <style>
+    #navbar{
+      display: flex;
+      background-color: bisque;
+    }
+    input{
+      width: 80%;
+      margin-left: 100px;
+      height: 20px;
+      margin: auto;
+      border-radius: 20px;
+      padding: 15px;
+    }
+    #navbar h1{
+      margin-left: 40px;
+    }
+  
+    #detailed_news{
+      width: 100%;
+      margin: auto;
+    }
+
+    #detailed_news > div{
+      width: 60%;
+      margin: auto;
+    }
+
+    img{
+      width: 100%;
+      height: 400px;
+    }
+  </style>
   <body>
     <!-- Same navbar with same functionality  -->
     <!-- Append detailed news in div with id "detailed_news"  -->
+    <div id="navbar"></div>
+      <div id="detailed_news"></div>
+    </div>
   </body>
 </html>
+<script src="/scripts/news.js" type="module"></script>
