--- a/news.html
+++ b/news.html
@@ -46,4 +46,4 @@
     </div>
   </body>
 </html>
-<script src="/scripts/news.js" type="module"></script>
+<script src="scripts/news.js" type="module"></script>
